--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,6 @@ services:
   - type: web
     name: arena-server
     runtime: node
-    plan: free
     rootDir: ./arena-server
     buildCommand: npm install
     startCommand: node server.js
@@ -12,11 +11,9 @@ services:
       - key: NODE_ENV
         value: production
 
-  # Frontend React App
-  - type: web
+  # Frontend React App (Static Site)
+  - type: static
     name: arena-frontend
-    runtime: static
-    plan: free
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
     pullRequestPreviewsEnabled: true
