--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,19 @@
+name: crypto-arena
+
 services:
   # Backend WebSocket Server
   - type: web
     name: arena-server
     runtime: node
     rootDir: ./arena-server
-    buildCommand: npm install
+    buildCommand: npm install --production
     startCommand: node server.js
     healthCheckPath: /api/health
     envVars:
       - key: NODE_ENV
         value: production
 
-  # Frontend React App (Static Site)
+  # Frontend React App
   - type: web
     name: arena-frontend
     runtime: static
