--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
   - type: web
     name: arena-frontend
     runtime: static
-    buildCommand: npm install && npx vite build
+    buildCommand: npm run build
     staticPublishPath: ./dist
     envVars:
       - key: VITE_SERVER_URL
