--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
   - type: web
     name: arena-frontend
     runtime: static
-    buildCommand: rm -rf node_modules && npm install && npm run build
+    buildCommand: rm -rf dist node_modules package-lock.json && npm install && npm run build
     staticPublishPath: ./dist
     envVars:
       - key: VITE_SERVER_URL
